--- a/RxArchitecture/app/src/main/res/layout/fragment_zhihu_detail.xml
+++ b/RxArchitecture/app/src/main/res/layout/fragment_zhihu_detail.xml
@@ -2,6 +2,7 @@
 <android.support.design.widget.CoordinatorLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:toolbar="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
@@ -13,32 +14,33 @@
         <android.support.design.widget.CollapsingToolbarLayout
             android:id="@+id/clp_toolbar"
             android:layout_width="match_parent"
-            android:layout_height="@dimen/detail_image_height"
+            android:layout_height="match_parent"
             android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
             app:contentScrim="?attr/colorPrimary"
-            app:expandedTitleMarginEnd="10dp"
+            app:title=" "
             app:layout_scrollFlags="scroll|exitUntilCollapsed">
 
-            <FrameLayout
+
+            <ImageView
+                android:id="@+id/detail_bar_image"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:fitsSystemWindows="true"
+                android:scaleType="centerCrop"
                 app:layout_collapseMode="parallax"
                 app:layout_collapseParallaxMultiplier="0.7"
-                app:layout_scrollFlags="scroll|snap|enterAlways|enterAlwaysCollapsed">
-                <ImageView
-                    android:id="@+id/detail_bar_image"
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:scaleType="centerCrop"
-                    />
-            </FrameLayout>
+                />
 
-            <include
-                layout="@layout/view_toolbar"
-                app:layout_collapseMode="pin"/>
 
-            </android.support.design.widget.CollapsingToolbarLayout>
+            <android.support.v7.widget.Toolbar
+                android:id="@+id/toolbar"
+                android:layout_width="match_parent"
+                android:layout_height="?attr/actionBarSize"
+                app:layout_collapseMode="pin"
+                toolbar:titleTextColor="#ffffff"
+                />
+
+
+        </android.support.design.widget.CollapsingToolbarLayout>
 
 
     </android.support.design.widget.AppBarLayout>
@@ -50,9 +52,11 @@
         android:overScrollMode="never"
         android:scrollbars="vertical"
         app:layout_behavior="@string/appbar_scrolling_view_behavior">
+
         <FrameLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent">
+
             <WebView
                 android:id="@+id/view_main"
                 android:layout_width="match_parent"
@@ -64,6 +68,7 @@
     </android.support.v4.widget.NestedScrollView>
 
     <FrameLayout
+        android:id="@+id/fl_bottom"
         android:layout_width="match_parent"
         android:layout_height="@dimen/detail_bottom_height"
         android:layout_gravity="bottom"
@@ -72,8 +77,8 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:orientation="horizontal"
             android:layout_gravity="bottom"
+            android:orientation="horizontal"
             android:padding="6dp">
 
             <android.support.v4.widget.Space
@@ -113,10 +118,11 @@
                 android:id="@+id/tv_detail_bottom_share"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:textColor="@color/bottom_text"
-                android:drawableTop="@drawable/ic_daily_share"
                 android:drawablePadding="3dp"
-                android:text="分享"/>
+                android:drawableTop="@drawable/ic_daily_share"
+                android:text="分享"
+                android:textColor="@color/bottom_text"/>
+
             <android.support.v4.widget.Space
                 android:layout_width="0dp"
                 android:layout_height="1dp"
