--- a/architecture/app/src/main/res/layout/main_activity.xml
+++ b/architecture/app/src/main/res/layout/main_activity.xml
@@ -1,28 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
-
-<android.support.v4.widget.DrawerLayout
+<FrameLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
-    android:id="@+id/draw_layout"
+    android:id="@+id/fl_content"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    >
-
-    <FrameLayout
-        android:id="@+id/fragment_container"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:gravity="center"
-        />
-
-    <ListView
-        android:id="@+id/draw_left_menu"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_gravity="start"
-        android:background="#ffffffff"
-        android:clipToPadding="false"
-        android:divider="@null"
-        android:listSelector="?attr/selectableItemBackground"
-        />
-
-</android.support.v4.widget.DrawerLayout>
+    />
