--- a/RxArchitecture/app/src/main/res/values/colors.xml
+++ b/RxArchitecture/app/src/main/res/values/colors.xml
@@ -4,4 +4,6 @@
     <color name="colorPrimaryDark">#303F9F</color>
     <color name="colorAccent">#FF4081</color>
     <color name="tab_unselect">#c9c9c9</color>
+
+    <color name="white">#ffffffff</color>
 </resources>
