--- a/RxArchitecture/app/src/main/res/layout/dialog_add_weather_setting_item.xml
+++ b/RxArchitecture/app/src/main/res/layout/dialog_add_weather_setting_item.xml
@@ -4,25 +4,21 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="45dp">
 
 
-    <android.support.v7.widget.RecyclerView
-        android:id="@+id/recycler"
-        android:layout_width="match_parent"
-        android:layout_height="240dp">
-
-    </android.support.v7.widget.RecyclerView>
-
-    <Button
-        android:id="@+id/btn_add"
+    <TextView
+        android:id="@+id/tv_time"
         android:layout_width="wrap_content"
-        android:layout_height="45dp"
+        android:layout_height="0dp"
+        android:layout_marginBottom="8dp"
         android:layout_marginStart="8dp"
-        android:text="添加"
-        android:textSize="10sp"
+        android:layout_marginTop="8dp"
+        android:gravity="center_vertical"
+        android:textSize="18sp"
+        android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/recycler"/>
-
+        app:layout_constraintTop_toTopOf="parent"
+        tools:text="07:00"/>
 </android.support.constraint.ConstraintLayout>
