--- a/RxArchitecture/model_zhihu/src/main/res/layout/zhihu_fragment_tab.xml
+++ b/RxArchitecture/model_zhihu/src/main/res/layout/zhihu_fragment_tab.xml
@@ -11,7 +11,7 @@
         android:id="@+id/view"
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:background="@color/zhihu_colorAccent" />
+        android:background="@color/base_colorAccent" />
 
     <android.support.design.widget.CoordinatorLayout
         android:layout_width="match_parent"
@@ -39,7 +39,7 @@
 
                     <android.support.v7.widget.Toolbar
                         android:id="@+id/toolbar"
-                        style="@style/ZhiHu_ToolBarStyle"
+                        style="@style/Base_ToolBarStyle"
                         android:layout_width="match_parent"
                         android:layout_height="?attr/actionBarSize">
                     </android.support.v7.widget.Toolbar>
