--- a/RxArchitecture/model_gank/src/main/res/layout/gank_fragment_list.xml
+++ b/RxArchitecture/model_gank/src/main/res/layout/gank_fragment_list.xml
@@ -3,6 +3,8 @@
               xmlns:app="http://schemas.android.com/apk/res-auto"
               android:layout_width="match_parent"
               android:layout_height="match_parent"
+              android:id="@+id/ll_content"
+              android:paddingBottom="56dp"
               android:orientation="vertical">
 
     <android.support.v4.widget.SwipeRefreshLayout
