--- a/RxArchitecture/model_gank/src/main/res/layout/gank_list_item_girl.xml
+++ b/RxArchitecture/model_gank/src/main/res/layout/gank_list_item_girl.xml
@@ -8,11 +8,11 @@
     <android.support.v7.widget.CardView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_margin="3dp"
         android:transitionName="shareView"
         android:foreground="?attr/selectableItemBackground"
-        app:cardElevation="3dp"
-        app:cardCornerRadius="2dp">
+        app:cardCornerRadius="10dp"
+        app:cardUseCompatPadding="true"
+        >
         <com.lmroom.baselib.widget.ScaleImageView
             xmlns:android="http://schemas.android.com/apk/res/android"
             android:id="@+id/imageView"
